@@ -73,7 +73,8 @@ try "no regular files provided as input"
 
 try "exec single shell utility and exit when a file is added to an implicit watch path"
 	setup
-	ls $tmp/file* | ./entr -d sh -c 'echo ping' >$tmp/exec.out 2>$tmp/exec.err &
+	ls $tmp/file* | ./entr -d sh -c 'echo ping' >$tmp/exec.out 2>$tmp/exec.err \
+	    || true &
 	bgpid=$! ; zz
 	touch $tmp/newfile
 	wait $bgpid
@@ -82,12 +83,23 @@ try "exec single shell utility and exit when a file is added to an implicit watc
 
 try "exec single shell utility and exit when a file is added to a specific path"
 	setup
-	ls -d $tmp | ./entr -d sh -c 'echo ping' >$tmp/exec.out 2>$tmp/exec.err &
+	ls -d $tmp | ./entr -d sh -c 'echo ping' >$tmp/exec.out 2>$tmp/exec.err \
+	    || true &
 	bgpid=$! ; zz
 	touch $tmp/newfile
 	wait $bgpid
 	assert "$(cat $tmp/exec.out)" "ping"
 	assert "$(cat $tmp/exec.err)" "entr: directory altered"
+
+try "do nothing when a file not monitored is changed in directory watch mode"
+	setup
+	ls $tmp/file2 | ./entr -d echo "changed" >$tmp/exec.out 2>$tmp/exec.err &
+	bgpid=$! ; zz
+	echo "123" > file1
+	kill -INT $bgpid
+	wait $bgpid
+	assert "$(cat $tmp/exec.out)" ""
+	assert "$(cat $tmp/exec.err)" ""
 
 try "exec utility when a file is written by Vim in directory watch mode"
 	setup
